--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,17 +3,17 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/home"
+        android:icon="@drawable/map_before"
         android:title="@string/title_home" />
 
     <item
         android:id="@+id/navigation_location"
-        android:icon="@drawable/location"
+        android:icon="@drawable/my_path_before"
         android:title="@string/title_location" />
 
     <item
         android:id="@+id/navigation_data"
-        android:icon="@drawable/hospital"
+        android:icon="@drawable/hand_before"
         android:title="@string/title_data" />
 
     <item
