--- a/app/src/main/res/layout/fragment_path_history.xml
+++ b/app/src/main/res/layout/fragment_path_history.xml
@@ -8,7 +8,7 @@
     android:weightSum="10">
 
     <TextView
-        android:id="@+id/text_home"
+        android:id="@+id/text_path_history"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
