--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,14 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
-        android:icon="@drawable/map_before"
-        android:title="@string/title_home" />
-
-    <item
         android:id="@+id/navigation_location"
         android:icon="@drawable/my_path_before"
         android:title="@string/title_location" />
+
+    <item
+        android:id="@+id/navigation_path_history"
+        android:icon="@drawable/map_before"
+        android:title="@string/title_path_history" />
 
     <item
         android:id="@+id/navigation_data"
