--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,19 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
-
-    <fragment
-        android:id="@+id/navigation_home"
-        android:name="com.example.capstone_corona_app.ui.home.HomeFragment"
-        android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+    app:startDestination="@+id/navigation_location">
 
     <fragment
         android:id="@+id/navigation_location"
         android:name="com.example.capstone_corona_app.ui.location.LocationFragment"
         android:label="@string/title_location"
         tools:layout="@layout/fragment_location" />
+
+    <fragment
+        android:id="@+id/navigation_path_history"
+        android:name="com.example.capstone_corona_app.ui.path_history.PathHistoryFragment"
+        android:label="@string/title_path_history"
+        tools:layout="@layout/fragment_path_history" />
 
     <fragment
         android:id="@+id/navigation_data"
