making gray arrow
making gray arrow

--- a/app/src/main/res/layout/fragment_location.xml
+++ b/app/src/main/res/layout/fragment_location.xml
@@ -134,7 +134,7 @@
                         android:layout_width="0dp"
                         android:layout_height="30dp"
                         android:layout_weight="4"
-                        android:src="@drawable/arrow_right" />
+                        android:src="@drawable/arrow_right_gray" />
 
                 </LinearLayout>
 
