--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorPrimaryBlueDark">#17527a</color>
     <color name="colorPrimaryOrange">#f3a663</color>
     <color name="colorAccent">#FF3B5F</color>
+    <color name="colorButton">#bfece3</color>
 </resources>
