show table layout

--- a/app/src/main/res/layout/fragment_path_history_table.xml
+++ b/app/src/main/res/layout/fragment_path_history_table.xml
@@ -6,13 +6,13 @@
     android:layout_height="match_parent"
     tools:context="com.example.capstone_corona_app.MainActivity">
 
+
+
     <TableLayout
         android:id="@+id/tablelayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="44dp"
-        android:layout_marginLeft="44dp"
-        android:layout_marginTop="32dp"
+        android:background="#fefefe"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
