--- a/app/src/main/res/layout/fragment_path_history_table.xml
+++ b/app/src/main/res/layout/fragment_path_history_table.xml
@@ -18,25 +18,33 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@drawable/table_border"
+            android:weightSum="6">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/table_border"
                 android:gravity="center"
                 android:text="날짜"
                 android:textSize="24dp"/>
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:background="@drawable/table_border"
                 android:gravity="center"
                 android:text="시간"
                 android:textSize="24dp"/>
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:background="@drawable/table_border"
                 android:gravity="center"
                 android:text="장소"
                 android:textSize="24dp"/>
